<resources>
    <string name="appName">Ginger money</string>
    <string name="locale">en</string>
    <string name="appVersion"
            translatable="false">{0} ({1})
    </string>

    <string name="currencyEurShort"
            translatable="false">EUR
    </string>
    <string name="currencyUsdShort"
            translatable="false">USD
    </string>
    <string name="currencyRubShort">RUB</string>

    <string name="dayMonday">Monday</string>
    <string name="dayTuesday">Tuesday</string>
    <string name="dayWednesday">Wednesday</string>
    <string name="dayThursday">Thursday</string>
    <string name="dayFriday">Friday</string>
    <string name="daySaturday">Saturday</string>
    <string name="daySunday">Sunday</string>

    <string name="dateTimeFormat">MM/dd/yyyy HH:mm a</string>
    <string name="dateFormat">MM/dd/yyyy</string>
    <string name="timeFormat">HH:mm a</string>

    <string name="commonNext">Next</string>
    <string name="commonFinish">Finish</string>
    <string name="commonOk">OK</string>
    <string name="commonCancel">Cancel</string>
    <string name="commonSave">Save</string>
    <string name="commonAmount">Amount</string>
    <string name="commonMemo">Memo</string>
    <string name="commonGroup">Group</string>
    <string name="commonName">Name</string>
    <string name="commonAccount">Account</string>
    <string name="commonAccounts">Accounts</string>
    <string name="commonCategory">Category</string>
    <string name="commonCategories">Categories</string>

    <string name="dialogSelectColorsTitle">Select colors</string>
    <string name="dialogSelectColorsText">Text color</string>
    <string name="dialogSelectColorsBackground">Background color</string>

    <string name="commonGeneralError">Unfortunately, an error was encountered during the operation.</string>
    <string name="passwordLenError">Password length must be from {0} to {1} characters</string>
    <string name="invalidPasswordError">Invalid password</string>

    <string name="amountKeyboard0Digit"
            translatable="false">0
    </string>
    <string name="amountKeyboard1Digit"
            translatable="false">1
    </string>
    <string name="amountKeyboard2Digit"
            translatable="false">2
    </string>
    <string name="amountKeyboard3Digit"
            translatable="false">3
    </string>
    <string name="amountKeyboard4Digit"
            translatable="false">4
    </string>
    <string name="amountKeyboard5Digit"
            translatable="false">5
    </string>
    <string name="amountKeyboard6Digit"
            translatable="false">6
    </string>
    <string name="amountKeyboard7Digit"
            translatable="false">7
    </string>
    <string name="amountKeyboard8Digit"
            translatable="false">8
    </string>
    <string name="amountKeyboard9Digit"
            translatable="false">9
    </string>
    <string name="amountKeyboardDone">Done</string>

    <string name="paymentCash">Cash</string>
    <string name="paymentCards">Card</string>
    <string name="paymentCreditCards">Credit card</string>
    <string name="paymentDebitCards">Debit card</string>
    <string name="paymentAccounts">Account</string>
    <string name="paymentDeposits">Deposit</string>
    <string name="paymentSavings">Savings</string>
    <string name="paymentInvestments">Investments</string>
    <string name="paymentShares">Shares</string>
    <string name="paymentBonds">Bonds</string>
    <string name="paymentOther">Other</string>

    <string name="passEnter">Enter master password</string>
    <string name="passMethodWithoutProtection">without protection</string>
    <string name="passMethodFingerprint">fingerprint</string>
    <string name="passMethodMasterPassword">master password</string>

    <string name="welcome">Welcome to Ginger Money!</string>

    <string name="setupMasterPassExplanation">Master-password is used for two purposes: 1) it\'s used for your data encryption; 2)
        you can use it to protect an entrance to the application.\n\nChoose the master-password wisely - it shouldn\'t be short or
        simple. And don\'t forget to write it down!
    </string>
    <string name="setupBaseCurrency">Choose base currency</string>
    <string name="setupBaseCurrencyExplanation">The base currency is the one you use most often to record your incomes and
        payments.
    </string>
    <string name="setupProtectionMethod">Select the application protection method</string>
    <string name="setupProtectionExplanation">This method will only be used when starting the application. This is a simple but
        effective way to protect your data.
    </string>

    <string name="enterLogin">Login</string>
    <string name="enterUseFingerprint">Use fingerprint</string>
    <string name="enterProtectedFingerprint">Protected by fingerprint</string>
    <string name="enterTouchSensor">Touch the sensor to continue</string>
    <string name="enterUseMaster">Use master password</string>
    <string name="enterFingerprintAuthFail">A fingerprint has not been recognized</string>

    <string name="mainPayments">Payments</string>
    <string name="mainPaymentsNoPayments">There are no payments this month</string>
    <string name="mainPaymentsNoAccounts">You have no accounts yet. Add at least one.</string>

    <string name="mainStatistics">Statistics</string>

    <string name="mainAccounts">@string/commonAccounts</string>
    <string name="mainAccountsTotal">Total</string>
    <string name="mainAccountsSelectCurrency">Select currency</string>
    <string name="mainAccountsNoData">You have no accounts yet</string>
    <string name="mainAccountsMenuSelectCurrency">Currency…</string>
    <string name="mainAccountsMenuSelectColors">Colors…</string>

    <string name="mainSettings">Settings</string>
    <string name="mainSettingsApplicationProtection">Application protection</string>
    <string name="mainSettingsDefaultCurrency">Default currency</string>
    <string name="mainSettingsStartDay">Start day of a week</string>
    <string name="mainProtectionDialogTitle">Select protection method</string>
    <string name="mainCurrencyDialogTitle">Select default currency</string>
    <string name="mainStartDayDialogTitle">Select start day of a week</string>

    <string name="addEditAccountAddTitle">Add account</string>
    <string name="addEditAccountEditTitle">Edit account</string>
    <string name="addEditAccountGroupDialogTitle">Account group</string>

    <string name="addEditAccountGroupIsEmptyError">Group of account can\'t be empty</string>
    <string name="addEditAccountMemoIsTooLongError">Memo value is too long</string>
    <string name="addEditAccountNameIsEmptyError">Name of account can\'t be empty</string>
    <string name="addEditAccountNameIsTooLongError">Name of account is too long</string>

    <string name="addEditPaymentAddTitle">Add payment</string>
    <string name="addEditPaymentCategoriesListTitle">Payment categories</string>
    <string name="addEditPaymentAddCategoryTitle">Add payment category</string>
    <string name="addEditPaymentEditCategoryTitle">Edit payment category</string>
    <string name="addEditPaymentCreatedAt">Created at</string>
    <string name="addEditPaymentNoCategories">You have no categories yet.\nAdd at least one.</string>
    <string name="addEditPaymentCategoryNameIsEmptyError">Name of category can\'t be empty</string>
    <string name="addEditPaymentCategoryNameIsTooLongError">Name of category is too long</string>

    <string name="addEditPaymentEmptyAccountError">Account must be selected</string>
    <string name="addEditPaymentEmptyCategoryError">Payment category must be selected</string>
    <string name="addEditPaymentEmptyAmountError">Amount value can\'t be empty</string>
</resources>
